--- a/list-answers.ipynb
+++ b/list-answers.ipynb
@@ -1623,7 +1623,33 @@
    "outputs": [],
    "source": [
     "with open(\"genes.txt\", \"r\") as f:\n",
-    "    gene_dict = {line.rstrip(\"\\n\"):line.}"
+    "    gene_dict = {line.rstrip(\"\\n\"):line.split(\".\")[0][:-5] for line in f}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(gene_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**OR**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"genes.txt\", \"r\") as f:\n",
+    "    gene_dict = {line.rstrip(\"\\n\"):line.split(\"0\")[0] for line in f}"
    ]
   },
   {
