removed Colab button

--- a/list.ipynb
+++ b/list.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/nuitrcs/NextStepsInPython/blob/master/listComprehension/list.ipynb)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### <br>*If you are using Google Colab, first run the code cell below. You can run a cell by clicking in the cell and clicking on the arrow that appears on the left side of the cell. DO NOT run this cell if you are not using Google Colab.*"
    ]
   },
@@ -760,7 +753,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use list comprehension to make a list called `ABC_list` of all students with names that start with A, B, `or` C."
+    "Use list comprehension to make a list called `ABC_list` of all students with names that start with A, B, `or` C. There are several ways to do this."
    ]
   },
   {
